# sccmhunter

./: .gitignore  BC08F30B-489A-4005-BBF6-06BA14287950.pem  D18663EB-1A4D-44CA-9199-EE5686320F4C.pem  LICENSE  README.md  TODO.txt  blah.txt  certificate.pem  changelog.md  domainadmin.ccache  domainadmin@HTTP_SCCM-SITESRV.UNSIGNED-SH0RT.NET@UNSIGNED-SH0RT.NET.ccache  out  pyproject.toml  pyvenv.cfg  requirements.txt  sccmhunter.py  setup.py  test.ps1
docs/superpowers/specs/: 2026-04-24-ldap-signing-design.md
lib/: constants.py  ldap.py  ldap_signed.py  logger.py
lib/attacks/: admin.py  admin_bak.py  cmpivot.py  dpapi.py  find.py  http.py  mssql.py  relay.py  show.py  smb.py
lib/commands/: admin.py  cmpivot.py  dpapi.py  find.py  http.py  mssql.py  relay.py  show.py  smb.py
lib/parsers/: parsers.py
lib/scripts/: add_admin.py  addcomputer.py  application.py  backdoor.py  banner.py  collection.py  pivot.py  reg.py  runscript.py  sccmwtf.py  themanager.py
lib/source/: Kerberoast.ps1  nanodump.ps1  nanodump_old.ps1
