[project]
name = "sccmhunter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "cmd2>=2.7.0",
    "cryptography>=46.0.3",
    "impacket>=0.13.0",
    "ldap3>=2.9.1",
    "pandas>=2.3.3",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pycryptodome>=3.23.0",
    "pyopenssl>=25.3.0",
    "requests>=2.32.5",
    "requests-ntlm>=1.3.0",
    "requests-toolbelt>=1.0.0",
    "rich>=14.2.0",
    "tabulate>=0.9.0",
    "typer>=0.20.0",
    "urllib3>=2.5.0",
]
